Project

General

Profile

Actions

Bug #26973

closed

mds: MDBalancer::try_rebalance() may stop prematurely

Added by Zheng Yan over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #32084: luminous: mds: MDBalancer::try_rebalance() may stop prematurelyResolvedNathan CutlerActions
Copied to CephFS - Backport #32086: mimic: mds: MDBalancer::try_rebalance() may stop prematurelyResolvedNathan CutlerActions
Actions #1

Updated by Zheng Yan over 5 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Assignee set to Zheng Yan
  • Target version set to v14.0.0
  • Source set to Development
  • Backport set to mimic,luminous
  • Component(FS) MDS added
  • Labels (FS) multimds added
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #32084: luminous: mds: MDBalancer::try_rebalance() may stop prematurely added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #32086: mimic: mds: MDBalancer::try_rebalance() may stop prematurely added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF